completed who we are section

--- a/index.html
+++ b/index.html
@@ -71,33 +71,30 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Services</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Who We Are</h2>
+            <h3 class="section-subheading text-muted">ObtainCXN is looking to become the first Rhode Island based technology company that specializes in IoT application development.  As a full-service software development company, ObtainCXN will provide turnkey solutions that bring great ideas to fruition. </h3>
           </div>
         </div>
         <div class="row text-center">
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-bullhorn fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">E-Commerce</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Our Mission</h4>
+            <p class="text-muted">To provide world class customer service and technical expertise at an affordable price.  Our mission is to ensure that business of all sizes can reap the benefits associated with the rapid rise of the Internet of Things (IoT). </p>
+          </div>
+          <div class="col-md-4">
+            <img src="img/founder.png" alt="ObtainCXN"/>
+            <h4 class="service-heading">Our Founder</h4>
+            <p class="text-muted">David Landi is an IT professional with over 13 years of experience in the technology field with a diverse background consisting of experience gained through positions in software development, leadership, and sales. David also has degree's in Software Engineering and an MSIT from New England Institute of Technology </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-users fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Responsive Design</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Web Security</h4>
+            <h4 class="service-heading">Our Customers</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
         </div>
