--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Who We Are</h2>
-            <h3 class="section-subheading text-muted">ObtainCXN is looking to become the first Rhode Island based technology company that specializes in IoT application development.  As a full-service software development company, ObtainCXN will provide turnkey solutions that bring great ideas to fruition. </h3>
+            <h3 class="section-subheading text-muted">ObtainCXN is looking to become the first Rhode Island based technology company that specializes in IoT application development. </h3>
           </div>
         </div>
         <div class="row text-center">
@@ -106,8 +106,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Portfolio</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">What We Do</h2>
+            <h3 class="section-subheading text-muted"> As a full-service IoT software development company, ObtainCXN will provide turnkey solutions that bring great ideas to fruition.</h3>
           </div>
         </div>
         <div class="row">
@@ -118,11 +118,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/iotConsult.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Threads</h4>
-              <p class="text-muted">Illustration</p>
+              <h4>Consultation</h4>
+              <p class="text-muted">What can IoT do for you</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -132,11 +132,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/alexa.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Explore</h4>
-              <p class="text-muted">Graphic Design</p>
+              <h4>Alexa</h4>
+              <p class="text-muted">Development</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -146,11 +146,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/googleIcon.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Finish</h4>
-              <p class="text-muted">Identity</p>
+              <h4>Google</h4>
+              <p class="text-muted">Development</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -160,11 +160,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/smartThings.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Lines</h4>
-              <p class="text-muted">Branding</p>
+              <h4>SmartThings</h4>
+              <p class="text-muted">Development</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -174,11 +174,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/mobile.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Southwest</h4>
-              <p class="text-muted">Website Design</p>
+              <h4>Mobile App</h4>
+              <p class="text-muted">Development</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -188,11 +188,53 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/portfolio.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Window</h4>
-              <p class="text-muted">Photography</p>
+              <h4>Portfolio</h4>
+              <p class="text-muted">Our Latest Work</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/businesscase.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>IoT</h4>
+              <p class="text-muted">Business Case</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/whyus.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Why Us</h4>
+              <p class="text-muted">Competitive Advantages</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/services.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Services</h4>
+              <p class="text-muted">What We Offer</p>
             </div>
           </div>
         </div>
@@ -204,7 +246,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">About</h2>
+            <h2 class="section-heading text-uppercase">How We Do It</h2>
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
           </div>
         </div>
